add css folder & relink in html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>Zhen's Markup Exercise 7: Curriculum Vitae</title>
 		<meta charset="UTF-8">
 		
-		<link href="Reset.css" rel="stylesheet" type="text/css"/>
-		<link href="ZhenLi_CV.css" rel="stylesheet" type="text/css"/>
+		<link href="css/Reset.css" rel="stylesheet" type="text/css"/>
+		<link href="css/CV.css" rel="stylesheet" type="text/css"/>
 		<link href="https://fonts.googleapis.com/css?family=Pacifico|Quicksand"
 			  rel="stylesheet"/>
 		<!--HTML validator says the "|" in the google fonts url is an illegal character,
