--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 		
 		<div id="footer">
 			<em>&copy; 2018 Zhen Li</em><br/>
-			Assignment for GLIS 634 @ Mcgill University<br/>
+			Assignment for GLIS 634 @ McGill University<br/>
 			The "pages" you see are artifitial, so this "site" may be printer-unfriendly.<br/>
 			Feel free to contact me for a printable CV !<br/>^ω^
 		</div><!-- footer -->
