add course project
634 redesign prototype

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div id="hcard-Zhen-Li" class="vcard">
 				<span class="fn" title="Je m'appele [dʒen] (*╹▽╹*)">Zhen Li</span>
 				<div class="tel">(438) 928-0111</div>
-				<a class="email" href="mailto:zhen.li3@mail.mcgill.ca">zhen.li3@mail.mcgill.ca</a>
+				<a class="email" href="634project/index.html">zhen.li3@mail.mcgill.ca</a>
 				<div class="adr">
 					<div class="street-address">60 Ave des Pins Ouest</div>
 					<span class="locality">Montréal</span>,
